methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:16: error: value avance is not a member of Unit
possible cause: maybe a semicolon is missing before `value avance'?
  } avance()
    ^