methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  avance()
  if (getCouleurSol == Color.green){
    recule()
    return true
  } else {
    recule()
    return false
  }
}

while (estSurBiscuit == false){
  while(isFacingTrail() == false){
    droite()
  } avance()
}

